# tachyon

./: .gitignore  BENCHMARK.md  GUIDE.md  IDEAS.md  INTENT.md  LICENSE  README.md  config.sample.yaml  config.yaml  config.yaml.example  go.mod
bench/: compare-post.sh  compare-tls.sh  compare.sh  full-matrix.sh  gc-cost.sh  gcloud-sync.sh  gcloud-up.sh  install-h2load-h3.sh  io-variants.sh  matrix.sh  post-large.lua  post-small.lua  provision.sh  run-h3.sh  run-post.sh  run-saturate.sh  run-tls.sh  run.sh
bench/pingora/: Cargo.toml
bench/pingora/src/: main.rs
buf/: arena.go  doc.go  pool.go  slab.go  slab_test.go
docs/: architecture.md  benchmark.md  connection-pool.md  development.md  intent-guide.md  zero-copy.md
e2e/: example_workflow_test.go  harness_test.go  intent_test.go  metrics_test.go
http1/: chunked.go  chunked_reader.go  chunked_reader_test.go  chunked_test.go  constants.go  doc.go  header_scan.go  request.go  request_parser.go  request_parser_test.go  response.go  response_parser.go  response_writer.go
http2/: conn.go  doc.go  flow.go  preface.go  settings.go  stream.go
http3/: conn.go  control_stream_test.go  h3_test.go
intent/: config.intent  example_workflow.intent  sample.intent
iouring/: cqe.go  doc.go  enter.go  mmap.go  register.go  ring.go  ring_test.go  setup.go  sqe.go  types_linux.go
metrics/: counters.go  counters_test.go  doc.go  promhttp.go
quic/: conn.go  echo_test.go  endpoint.go  endpoint_test.go  flowcontrol.go  handshake_test.go  recovery_integration_test.go  stream.go  stream_test.go  testhelpers.go  (+2 more)
(+177 files in other folders)
